--- a/flash-cards/src/App.css
+++ b/flash-cards/src/App.css
@@ -3,6 +3,21 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  color: #000;
+
+}
+.title-container {
+  width: 38vw;
+  background-color: rgba(255, 255, 255, .15);  
+  backdrop-filter: blur(3px);
+  padding: 1rem;
+  border-radius: 10px;
+  border: 2px solid #000;
+
 }
 
 .logo {
