--- a/flash-cards/src/index.css
+++ b/flash-cards/src/index.css
@@ -11,58 +11,167 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('./assets/background.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  z-index: -1;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
 
-body {
-  margin: 0;
+.Card-Container{
+  border-radius: 11px;
+  border: 2px solid #000;
+  opacity: 1;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 41vh;
+  width: 40vw;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.Card-Container[data-difficulty="easy"] {
+  background-color: #CADF9E;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.Card-Container[data-difficulty="medium"] {   
+  background-color: #FFCF00;
+}
+
+.Card-Container[data-difficulty="hard"] {
+  background-color: #FF7F50;
+}
+
+.difficulty-indicator{
+  position: absolute;
+  height: 38vh;
+  width: 38vw;
+  border-radius: 10px;
+  border: 2px solid #000;
+  opacity: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #e1bf82;
+}
+
+.Flash-Card{
+
+  display: flex;
+  width: 100%;
+  height: 100%;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
+  align-items: center;
+  justify-content: center;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.Flash-Card.flipped{
+  transform: rotateY(180deg);
 }
+
+.Flash-Card-Question, .Flash-Card-Answer{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  padding: 1rem;
+
+}
+
+.Flash-Card-Question {
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  border-radius: 10px;
+  display: flex;
+  transform: rotateY(0deg);
+}
+
+
+.Flash-Card-Answer {
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  border-radius: 10px;
+  display: flex;
+  transform: rotateY(180deg);
+}
+
+.Flash-Card-Answer img{
+  opacity: 0.5;
+  border-radius: 10px;
+    border: 2px solid #000;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.Flash-Card-Answer h2 {
+  position: absolute;
+
+}
+
+.button-container{
+  display: flex;
+  width: 100%;
+  margin-top: 0.5rem;
+  padding: 1rem;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.next-button{
+  margin-right: 10%;
+}
+
+.previous-button{
+  margin-left: 10%;
+}
+
+
+.next-button, .previous-button{
+  width: 20%;
+  font-size: 2rem;
+  border-radius: 10px;
+  cursor: pointer;
+  background-color:#e1bf82;
+  border: 2px solid #000;
+  transition: all 0.2s ease-in-out;
+  padding: 0.5rem;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+}
+
+.next-button:hover, .previous-button:hover {
+  transform: scale(1.05);
+}
+
+.flag-container{
+  margin-top: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 90%;
+  height: 90%;
+}
+
+.flag-image{
+  border-radius: 10px;
+    border: 2px solid #000;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
